--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "@homee/react-native-mapbox-navigation": "^1.1.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
