--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@homee/react-native-mapbox-navigation": "^1.1.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
+    "@react-native-mapbox-gl/maps": "^8.5.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
@@ -20,6 +22,7 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-tomtom-autocomplete": "^1.1.3",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
