--- a/ios/TripPlanner/Info.plist
+++ b/ios/TripPlanner/Info.plist
@@ -13,6 +13,8 @@
 	<string>pk.eyJ1Ijoibmlja2Z1bGxlciIsImEiOiJjbDBzY2ZtdW8wMDRrM2xuM3dwbXozdzNjIn0.hSoWZ6hIKLCOSpLfO0lrPw</string>
 	<key>MBXAccessToken</key>
 	<string>pk.eyJ1Ijoibmlja2Z1bGxlciIsImEiOiJjbDBzY2ZtdW8wMDRrM2xuM3dwbXozdzNjIn0.hSoWZ6hIKLCOSpLfO0lrPw</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs to get your location...</string>
 	<key>CFBundleDisplayName</key>
 	<string>TripPlanner</string>
 	<key>CFBundleExecutable</key>
