--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.67.4",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-get-location": "^2.2.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-tomtom-autocomplete": "^1.1.3",
