--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.1",
     "react-native": "0.67.4",
+    "react-native-calendar-picker": "^7.1.2",
+    "react-native-date-picker": "^4.2.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-get-location": "^2.2.1",
     "react-native-safe-area-context": "3.3.2",
