--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data android:name="MAPBOX_ACCESS_TOKEN"
+        android:value="pk.eyJ1IjoibGthc2RqZmxrYWpzZCIsImEiOiJjbDEzeXN6ajEwZTFrM2NwMzkyb2wyeHplIn0.8klspEY8JDqPXHEZ2XlAIw" />
     </application>
 </manifest>
